# claude-code-playground

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: cve-researcher.md
.claude/skills/add-scanner/: SKILL.md
.claude/skills/triage-cve/: SKILL.md
depaudit/: __init__.py  cli.py  mcp_server.py  models.py  net.py  osv.py  parsers.py
depaudit/checks/: CLAUDE.md  __init__.py  license.py  typosquat.py
depaudit/data/: __init__.py  popular_packages.py
depaudit/parsers/: CLAUDE.md  __init__.py  _normalize.py  environment.py  pyproject.py  requirements.py
docs/: claude-code-mastery.md
examples/: requirements-sample.txt
tests/: test_cli.py  test_license.py  test_mcp_server.py  test_net.py  test_osv.py  test_parsers.py  test_pyproject.py  test_typosquat.py
