[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "depaudit"
version = "0.1.0"
description = "Audit Python project dependencies for supply-chain risk (CVEs, typosquatting, licenses, integrity)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "keklikci" }]
keywords = ["security", "supply-chain", "dependencies", "sca", "vulnerability"]
# Intentionally zero runtime dependencies for now: a security tool should keep its own
# attack surface small. Network/CVE features arrive in Module 3.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
depaudit = "depaudit.cli:main"

[tool.setuptools.packages.find]
include = ["depaudit*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle, I = isort, B = bugbear, UP = pyupgrade,
# S = flake8-bandit (security lints — relevant to our focus).
select = ["E", "F", "I", "B", "UP", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # asserts are expected in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
