[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "depaudit"
version = "0.1.0"
description = "Audit Python project dependencies for supply-chain risk (CVEs, typosquatting, licenses, integrity)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "keklikci" }]
keywords = ["security", "supply-chain", "dependencies", "sca", "vulnerability"]
# Intentionally zero runtime dependencies for now: a security tool should keep its own
# attack surface small. Network/CVE features arrive in Module 3.
dependencies = []

[project.optional-dependencies]
# The MCP server (depaudit/mcp_server.py) is the only part that needs a third-party
# runtime dep; keeping it an extra preserves the core tool's zero-dependency footprint.
mcp = ["mcp>=1.2"]
dev = ["pytest>=8", "ruff>=0.6", "depaudit[mcp]"]

[project.scripts]
depaudit = "depaudit.cli:main"
depaudit-mcp = "depaudit.mcp_server:main"

[tool.setuptools.packages.find]
include = ["depaudit*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle, I = isort, B = bugbear, UP = pyupgrade,
# S = flake8-bandit (security lints — relevant to our focus),
# BLE = flake8-blind-except (enforces our "no bare/blind except" rule).
select = ["E", "F", "I", "B", "UP", "S", "BLE"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # asserts are expected in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
